
  * checks/files.pm:
    + [NT] Apply patch from Samuel Thibault to fix a
      false-positive non-standard-toplevel-dir for the
      directories /hurd and /servers.  (Closes: #724524)
  * checks/testsuite.pm:
    + [NT] Allow uppercase letters in the names of DEP-8
      tests, now that the DEP-8 officially "tolerates" them.
      (see #711844)

  * reporting/{config,harness}:
    + [NT] Determine the html_reports command automatically
      instead of allowing it to be configurable.
    + [NT] Stop allowing config script to name individual
      log files.  The directory in which they are put is still
      configurable.
    + [NT] Replace LINTIAN_CFG with passing "--no-cfg" to
      lintian.
    + [NT] Replace $lintian_cmd config option with a
      @EXTRA_LINTIAN_OPTIONS.  Also stop forking a shell to
      run lintian.
    + [NT] Remove LINTIAN_BIN_DIR; it is no longer used to
      avoid signature checking.
  * reporting/lintian-dummy.cfg:
    + [NT] Remove file as it is now obsolete.

 -- Niels Thykier <niels@thykier.net>  Sun, 22 Sep 2013 11:10:30 +0200

lintian (2.5.18.1) unstable; urgency=low

  * checks/files.pm:
    + [NT] Only open .pc files if they are regular files.
      This fixes a possible DoS introduced in 2.5.17.
  * checks/shared-libs.pm:
    + [NT] Correct the name of the multiarch-dirs data file,
      which was renamed in 2.5.17.

  * lib/{Test/Lintian,Lintian/Data}.pm:
    + [NT] Load data files eagerly during tests to ensure
      missing or typo'ed data files are spotted earlier.

  * debian/changelog:
    + [NT] Mention in the 2.5.17 entry that multiarch-dirs
      data file was renamed.
    + [NT] Consistently spell "typos" without an "e".

 -- Niels Thykier <niels@thykier.net>  Sun, 22 Sep 2013 10:51:29 +0200

lintian (2.5.18) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - debian-changelog-has-wrong-weekday
      - debian-rules-missing-good-practice-target-dfsg
      - empty-udeb-package